<resources>
    <string name="app_name">ConstraintLayout</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="belum_punya_akun_register">Belum punya akun? Register</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="academy">Academy</string>
    <string name="help">Help</string>
    <string name="profile">Profile</string>
    <string name="keluar">Keluar</string>
    <string name="new_student">New student</string>
    <string name="student_name">Student name</string>
    <string name="email">Email</string>
    <string name="save">Save</string>
    <string name="nama_dan_email_tidak_boleh_kosong">Nama dan email tidak boleh kososng</string>
    <string name="gagal_menyimpan">Gagal menyimpan, periksa koneksi internet anda</string>
    <string name="student_profile">Student Profile</string>
    <string name="delete_student">Delete Student</string>
    <string name="edit_student">Edit student</string>
</resources>
